--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,6 +1,9 @@
+reorder_imports = true
 imports_granularity = "Crate"
-group_imports = "StdExternalCrate"
-
-format_code_in_doc_comments = true
-
+use_small_heuristics = "Max"
+comment_width = 100
+wrap_comments = true
+binop_separator = "Back"
+trailing_comma = "Vertical"
+trailing_semicolon = false
 use_field_init_shorthand = true
