--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -21,12 +21,19 @@ reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package =
 reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm"}
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces"}
 
+alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types", features = ["json"]}
+alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
+alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}
+tokio = { version = "1.28.2", features = ["full"] }
+hex = "0.4.3"
+eyre = "0.6.8"
+ruint2 = "1.9.0"
 tracing = "0.1.0"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
 
-
-# Async
-tokio = { version = "1.28.2", features = ["full"] }
-
-# error handling
-eyre = "0.6.8"
+# evm
+ethers = { version = "2.0.7",  features = ["ipc", "ws"] }
+rustc-hex = "2.1.0"
+revm-primitives = "1.1.2"
