--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -7,20 +7,20 @@ edition = "2021"
 
 [dependencies]
 # Reth
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks"}
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc"}
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api"}
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder"}
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types"}
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider"}
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool"}
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api"}
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives"}
-reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db"}
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree"}
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus"}
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm"}
-reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces"}
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "31af4d5" }
+reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "31af4d5"}
+reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "31af4d5"}
+reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "31af4d5"}
+reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "31af4d5"}
+reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "31af4d5"}
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "31af4d5"}
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "31af4d5"}
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "31af4d5"}
+reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "31af4d5"}
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "31af4d5"}
+reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "31af4d5"}
+reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5"}
+reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}
 
 # tracing
 tracing = "0.1.0"
