--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -36,8 +36,8 @@ alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-jso
 alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}
 
 # Ethers
-ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", package = "ethers-etherscan" }
-ethers-core = { git = "https://github.com/gakonst/ethers-rs", package = "ethers-core" }
+alloy-etherscan = {path = "../alloy-etherscan"}
+ethers-core = "2.0.7"
 ethers = "2.0.0"
 # Revm
 revm-primitives = "1.1.2"
