--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -52,3 +52,5 @@ colored = "2.0"
 # env 
 dotenv = "0.15.0"
 reqwest = { version = "0.11.18", features = ["json"] }
+log = "0.4.19"
+env_logger = "0.10.0"
