--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -54,3 +54,4 @@ dotenv = "0.15.0"
 reqwest = { version = "0.11.18", features = ["json"] }
 log = "0.4.19"
 env_logger = "0.10.0"
+phf = { version = "0.11", default-features = false }
