--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -30,3 +30,7 @@ reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth
 
 env_logger = "0.10.0"
 log = "0.4.18"
+
+#Tracing
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
