--- a/crates/alloy-etherscan/Cargo.toml
+++ b/crates/alloy-etherscan/Cargo.toml
@@ -36,6 +36,8 @@ thiserror = "1.0"
 semver = "1.0"
 
 #tracing
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
 
 
 
