--- a/crates/reth-tracing/Cargo.toml
+++ b/crates/reth-tracing/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "poirot-core"
+name = "reth-tracing"
 version = "0.1.0"
 edition = "2021"
 
@@ -22,36 +22,8 @@ reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package =
 reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5"}
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}
 
-# tracing
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
+# err
+eyre = "0.6.8"
 
 # Async
 tokio = { version = "1.28.2", features = ["full"] }
-
-# Alloy
-alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types", features = ["json"]}
-alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
-alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
-alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}
-
-# Ethers
-alloy-etherscan = {path = "../alloy-etherscan"}
-ethers-core = "2.0.7"
-ethers = "2.0.0"
-# Revm
-revm-primitives = "1.1.2"
-
-# Serde 
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
-
-# error handling
-eyre = "0.6.8"
-colored = "2.0"
-thiserror = "1.0.44"
-# env 
-dotenv = "0.15.0"
-reqwest = { version = "0.11.18", features = ["json"] }
-log = "0.4.18"
-env_logger = "0.10.0"
-phf = { version = "0.11", default-features = false }
