--- a/crates/alloy-etherscan/Cargo.toml
+++ b/crates/alloy-etherscan/Cargo.toml
@@ -38,6 +38,7 @@ semver = "1.0"
 #tracing
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
+console-subscriber = "0.1.5"
 
 
 
