finished tracing, need to test

--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -36,3 +36,4 @@ tracing = { workspace = true }
 console-subscriber = "0.1.5"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
 reth-tracing = { path="../reth-tracing" }
+tracing-futures = { version = "0.2.5"}
