start normalisation db
Former-commit-id: af577e25e2ed9df83054d125d85d5918e702f69d

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/alloy-etherscan",
     "crates/reth-tracing",
     "crates/tracing",
+    "crates/poirot-inspect",
 ]
 
 [patch.crates-io]
