--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -25,6 +25,7 @@ reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth
 # tracing
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
+metrics = "0.21.1"
 
 # Async
 tokio = { version = "1.28.2", features = ["full", "tracing"] }
