--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -29,6 +29,7 @@ metrics = "0.21.1"
 
 # Async
 tokio = { version = "1.28.2", features = ["full", "tracing"] }
+lazy_static = "1.4.0"
 
 # Alloy
 alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types", features = ["json"]}
