made clippy happy
Former-commit-id: 6ff52220ed5e3908043befcd94dd04290d3d31a9

--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -7,6 +7,4 @@ edition = "2021"
 
 [dependencies]
 tracing = { workspace = true }
-tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
-console-subscriber = "0.1.5"
-metrics-tracing-context = "0.14.0"
+tracing-subscriber = { workspace = true }
