--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -33,9 +33,6 @@ log = "0.4.18"
 
 # tracing
 tracing = { workspace = true }
-console-subscriber = "0.1.5"
-tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
+tracing-subscriber = { workspace = true }
 reth-tracing = { path="../reth-tracing" }
-tracing-futures = { version = "0.2.5"}
-metrics = "0.21.1"
 colored = "2.0"
