--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -27,7 +27,7 @@ reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package =
 reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5"}
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}
 
-
+# logging
 env_logger = "0.10.0"
 log = "0.4.18"
 
@@ -36,3 +36,13 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 reth-tracing = { path="../reth-tracing" }
 colored = "2.0"
+
+# prometheus
+metrics-exporter-prometheus = "0.12.1"
+metrics-util = "0.15.0"
+
+# misc
+eyre = "0.6.8"
+
+# http/rpc
+hyper = "0.14.25"
