--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -40,6 +40,7 @@ colored = "2.0"
 # prometheus
 metrics-exporter-prometheus = "0.12.1"
 metrics-util = "0.15.0"
+metrics-process = "1.0.9"
 
 # misc
 eyre = "0.6.8"
