--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -23,6 +23,8 @@ reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm"
 reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "31af4d5"}
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}
 reth-tracing = {path = "../reth-tracing"}
+ruint = { version = "1.9.0", features = ["primitive-types", "rlp"] }
+
 # tracing
 tracing = "0.1.37"
 metrics = "0.21.1"
@@ -32,7 +34,7 @@ tokio = { version = "1.28.2", features = ["full", "tracing"] }
 lazy_static = "1.4.0"
 
 # Alloy
-alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types", features = ["json"]}
+alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types"}
 alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
 alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
 alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}
@@ -41,12 +43,13 @@ alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-
 alloy-etherscan = {path = "../alloy-etherscan"}
 ethers-core = "2.0.7"
 ethers = "2.0.0"
+
 # Revm
 revm-primitives = "1.1.2"
 
 # Serde 
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
-serde = "1.0.177"
+serde = { version = "1.0" }
+serde_json = { version = "1.0" }
 
 # error handling
 eyre = "0.6.8"
