finished dyn deocding
Former-commit-id: 8f7417a0cad5ad4e588f5ec89c42d4b08838901f

--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -10,6 +10,7 @@ poirot-core = { path = "../poirot-core" }
 
 # Async
 tokio = { version = "1.13.0", features = ["full", "tracing"] }
+futures = "0.3.28"
 
 # Reth
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "31af4d5" }
