--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+.env
+crates/bin/build.rs
 
 # Added by cargo
 
