--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -3,48 +3,56 @@ name = "bin"
 version = "0.1.0"
 edition = "2021"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poirot-core = { path = "../poirot-core" }
+poirot-core.workspace = true
 
 # Async
-tokio = { version = "1.13.0", features = ["full", "tracing"] }
-futures = "0.3.28"
+tokio = { workspace = true, features = ["full", "tracing"] }
+futures.workspace = true
 
 # Reth
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "31af4d5" }
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "31af4d5"}
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "31af4d5"}
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "31af4d5"}
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "31af4d5"}
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "31af4d5"}
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "31af4d5"}
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "31af4d5"}
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "31af4d5"}
-reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "31af4d5"}
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "31af4d5"}
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "31af4d5"}
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5"}
-reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}
+reth-tasks.workspace = true
+reth-rpc.workspace = true
+reth-rpc-api.workspace = true
+reth-rpc-builder.workspace = true
+reth-rpc-types.workspace = true
+reth-provider.workspace = true
+reth-transaction-pool.workspace = true
+reth-network-api.workspace = true
+reth-primitives.workspace = true
+reth-db.workspace = true
+reth-blockchain-tree.workspace = true
+reth-beacon-consensus.workspace = true
+reth-revm.workspace = true
+reth-interfaces.workspace = true
 
 # logging
-env_logger = "0.10.0"
-log = "0.4.18"
+env_logger.workspace = true
+log.workspace = true
 
 # tracing
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-reth-tracing = { path="../reth-tracing" }
-colored = "2.0"
+tracing.workspace = true
+tracing-subscriber.workspace = true
+reth-tracing.workspace = true
+colored.workspace = true
 
 # prometheus
-metrics-exporter-prometheus = "0.12.1"
-metrics-util = "0.15.0"
-metrics-process = "1.0.9"
+metrics-exporter-prometheus.workspace = true
+metrics-util.workspace = true
+metrics-process.workspace = true
 
 # misc
-eyre = "0.6.8"
+eyre.workspace = true
 
 # http/rpc
-hyper = "0.14.25"
+hyper.workspace = true
+
+
+[build-dependencies]
+tokio.workspace = true
+clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
+hyper.workspace = true
+serde.workspace = true
