updated build script

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 export ETHERSCAN_API_KEY="6A97YPZQ1JTAKGG7K7UF3QS89ZN7T5HINP"
 export DB_PATH="/home/data/reth/db"
+
+export CLICKHOUSE_URL=""
+export CLICKHOUSE_URL=""
+
+export CLICKHOUSE_URL=""
+export CLICKHOUSE_URL=""
+export CLICKHOUSE_URL=""
