--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -55,4 +55,12 @@ hyper.workspace = true
 tokio.workspace = true
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 hyper.workspace = true
+hyper-tls = "0.5.0"
 serde.workspace = true
+serde_json.workspace = true
+alloy-etherscan.workspace = true
+alloy-sol-types.workspace = true
+alloy-json-abi.workspace = true
+ethers-core.workspace = true
+phf = { version = "0.11.1", default-features = false }
+phf_codegen = "0.11.1"
