--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -29,6 +29,10 @@ reth-beacon-consensus.workspace = true
 reth-revm.workspace = true
 reth-interfaces.workspace = true
 
+# Alloy
+alloy-sol-macro = { workspace = true, features = ["json"]}
+alloy-sol-types = { workspace = true, features = ["json"]}
+
 # logging
 env_logger.workspace = true
 log.workspace = true
@@ -59,8 +63,6 @@ hyper-tls = "0.5.0"
 serde.workspace = true
 serde_json.workspace = true
 alloy-etherscan.workspace = true
-alloy-sol-types.workspace = true
-alloy-json-abi.workspace = true
 ethers-core.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
