--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ alloy-etherscan = {path = "./crates/alloy-etherscan"}
 alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types"}
 alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
 alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
+alloy-sol-macro = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-macro"}
 alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}
 
 # Async
