--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -69,3 +69,4 @@ alloy-etherscan.workspace = true
 ethers-core.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
+dotenv = "0.15.0"
