--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [workspace]
 members = [
-    "crates/poirot-core",
-    "crates/bin",
-    "crates/alloy-etherscan",
-    "crates/reth-tracing",
-    "crates/tracing",
-    "crates/poirot-inspect",
-    "crates/poirot-normalizer",
+  "crates/poirot-core",
+  "crates/bin",
+  "crates/alloy-etherscan",
+  "crates/reth-tracing",
+  "crates/tracing",
+  "crates/poirot-inspect",
+  "crates/poirot-types",
 ]
 
 
 resolver = "2"
-
 
 
 [patch.crates-io]
@@ -24,7 +23,7 @@ revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
 # Poirot
 poirot-core = { path = "./crates/poirot-core" }
 poirot-inspect = { path = "./crates/poirot-inspect" }
-poirot-normalizer = { path = "./crates/poirot-normalizer" }
+poirot-types = { path = "./crates/poirot-types/" }
 
 # Ethers
 ethers-core = "2.0.7"
@@ -32,32 +31,32 @@ ethers = "2.0.0"
 
 # Reth
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "31af4d5" }
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "31af4d5"}
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "31af4d5"}
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "31af4d5"}
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "31af4d5"}
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "31af4d5"}
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "31af4d5"}
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "31af4d5"}
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "31af4d5"}
-reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "31af4d5"}
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "31af4d5"}
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "31af4d5"}
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5"}
-reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5"}
-reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "31af4d5"}
+reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "31af4d5" }
+reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "31af4d5" }
+reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "31af4d5" }
+reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "31af4d5" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "31af4d5" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "31af4d5" }
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "31af4d5" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "31af4d5" }
+reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "31af4d5" }
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "31af4d5" }
+reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "31af4d5" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "31af4d5" }
+reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "31af4d5" }
+reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "31af4d5" }
 
 
 # ruint
 ruint = "1.9.0"
 
 # Alloy
-alloy-etherscan = {path = "./crates/alloy-etherscan"}
-alloy-sol-types = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-types"}
-alloy-primitives = {git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
-alloy-json-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-json-abi"}
-alloy-sol-macro = {git = "https://github.com/alloy-rs/core", package = "alloy-sol-macro"}
-alloy-dyn-abi = {git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi"}
+alloy-etherscan = { path = "./crates/alloy-etherscan" }
+alloy-sol-types = { git = "https://github.com/alloy-rs/core", package = "alloy-sol-types" }
+alloy-primitives = { git = "https://github.com/alloy-rs/core", package = "alloy-primitives" }
+alloy-json-abi = { git = "https://github.com/alloy-rs/core", package = "alloy-json-abi" }
+alloy-sol-macro = { git = "https://github.com/alloy-rs/core", package = "alloy-sol-macro" }
+alloy-dyn-abi = { git = "https://github.com/alloy-rs/core", package = "alloy-dyn-abi" }
 
 # Async
 tokio = "1.13.0"
@@ -65,8 +64,11 @@ futures = "0.3.28"
 
 #Tracing
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
-reth-tracing = { path="./crates/reth-tracing" }
+tracing-subscriber = { version = "0.3.17", default-features = false, features = [
+  "env-filter",
+  "fmt",
+] }
+reth-tracing = { path = "./crates/reth-tracing" }
 colored = "2.0"
 
 # Metrics
