--- a/crates/poirot-types/Cargo.toml
+++ b/crates/poirot-types/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "poirot-normalizer"
+name = "poirot-types"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-typed-arena = "2.0.2"
-ethers.workspace = true
-tracing = "0.1.37"
+alloy-dyn-abi.workspace = true
+reth-rpc-types.workspace = true
+reth-primitives.workspace = true
+tracing.workspace = true
