--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ alloy-dyn-abi = { git = "https://github.com/alloy-rs/core", package = "alloy-dyn
 # Async
 tokio = "1.13.0"
 futures = "0.3.28"
+async-trait = "0.1.73"
 
 #Tracing
 tracing = "0.1.37"
