--- a/crates/poirot-core/Cargo.toml
+++ b/crates/poirot-core/Cargo.toml
@@ -73,6 +73,7 @@ hyper-tls = "0.5.0"
 serde.workspace = true
 serde_json.workspace = true
 alloy-etherscan.workspace = true
+alloy-json-abi.workspace = true
 ethers-core.workspace = true
 phf = { version = "0.11.1", default-features = false }
 phf_codegen = "0.11.1"
