--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -12,3 +12,6 @@ hyper.workspace = true
 serde.workspace = true
 async-trait.workspace = true
 poirot-types.workspace = true
+
+# error handling
+thiserror.workspace = true
