--- a/crates/poirot-classifer/Cargo.toml
+++ b/crates/poirot-classifer/Cargo.toml
@@ -12,5 +12,6 @@ reth-rpc-types.workspace = true
 reth-primitives.workspace = true
 tracing.workspace = true
 poirot-core.workspace = true
+hex-literal.workspace = true
 
 rayon = "1.7.0"
