init sandwhich inspector

--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -23,3 +23,4 @@ serde_with = { version = "3.3.0", features = ["macros"] }
 malachite.workspace = true
 
 sorella-db-clients = { git = "https://github.com/SorellaLabs/Database", package = "sorella-db-clients" , branch = "modifications"}
+reth-primitives.workspace = true
