--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "crates/poirot-inspect",
   "crates/poirot-types",
   "crates/poirot-classifer",
+    "crates/poirot-metrics",
   "crates/tracing",
 ]
 
@@ -26,6 +27,7 @@ poirot-core = { path = "./crates/poirot-core" }
 poirot-inspect = { path = "./crates/poirot-inspect" }
 poirot-types = { path = "./crates/poirot-types/" }
 poirot-classifer = { path = "./crates/poirot-classifer/" }
+poirot-metrics = { path = "./crates/poirot-metrics/" }
 reth-tracing = { path = "./crates/reth-tracing/" }
 
 # Ethers
