--- a/crates/poirot-classifer/Cargo.toml
+++ b/crates/poirot-classifer/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 poirot-types.workspace = true
 alloy-dyn-abi.workspace = true
+alloy-sol-types.workspace = true
 reth-rpc-types.workspace = true
 reth-primitives.workspace = true
 tracing.workspace = true
