doesn't build, need to rewire stream

--- a/crates/poirot-inspect/Cargo.toml
+++ b/crates/poirot-inspect/Cargo.toml
@@ -12,6 +12,7 @@ hyper.workspace = true
 serde.workspace = true
 async-trait.workspace = true
 poirot-types.workspace = true
+poirot-labeller.workspace = true
 reth-primitives.workspace = true
 # error handling
 thiserror.workspace = true
@@ -22,4 +23,3 @@ serde_with = { version = "3.3.0", features = ["macros"] }
 # numbers
 malachite.workspace = true
 
-sorella-db-clients = { git = "https://github.com/SorellaLabs/Database", package = "sorella-db-clients", branch = "modifications" }
