--- a/crates/poirot-classifer/Cargo.toml
+++ b/crates/poirot-classifer/Cargo.toml
@@ -14,6 +14,6 @@ reth-primitives.workspace = true
 tracing.workspace = true
 poirot-core.workspace = true
 hex-literal.workspace = true
-
+malachite.workspace = true
 rayon = "1.7.0"
 paste = "1.0.14"
