--- a/crates/poirot-classifer/Cargo.toml
+++ b/crates/poirot-classifer/Cargo.toml
@@ -18,6 +18,7 @@ serde_json.workspace = true
 
 rayon = "1.7.0"
 paste = "1.0.14"
+phf = { version = "0.11", default-features = false }
 
 [build-dependencies]
 tokio.workspace = true
