Feat/pool tokens (#3)
* feat: pool tokens

* finish

* run cargo and clippy fix

--- a/crates/poirot-classifer/Cargo.toml
+++ b/crates/poirot-classifer/Cargo.toml
@@ -21,3 +21,18 @@ serde_json.workspace = true
 
 rayon = "1.7.0"
 paste = "1.0.14"
+phf = { version = "0.11", default-features = false }
+
+[build-dependencies]
+tokio.workspace = true
+clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
+hyper.workspace = true
+hyper-tls = "0.5.0"
+serde.workspace = true
+serde_json.workspace = true
+alloy-etherscan.workspace = true
+alloy-json-abi.workspace = true
+ethers-core.workspace = true
+phf = { version = "0.11.1", default-features = false }
+phf_codegen = "0.11.1"
+dotenv = "0.15.0"
