--- a/crates/poirot-labeller/Cargo.toml
+++ b/crates/poirot-labeller/Cargo.toml
@@ -15,5 +15,7 @@ thiserror.workspace = true
 # numbers
 malachite.workspace = true
 hyper-tls = "0.5.0"
+poirot-core.workspace = true
 hyper.workspace = true
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
+futures = "0.3.28"
