--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ members = [
   "crates/poirot-inspect",
   "crates/poirot-types",
   "crates/poirot-classifer",
-    "crates/poirot-metrics",
+  "crates/poirot-metrics",
+  "crates/poirot-labeller",
   "crates/tracing",
 ]
 
@@ -28,6 +29,7 @@ poirot-inspect = { path = "./crates/poirot-inspect" }
 poirot-types = { path = "./crates/poirot-types/" }
 poirot-classifer = { path = "./crates/poirot-classifer/" }
 poirot-metrics = { path = "./crates/poirot-metrics/" }
+poirot-labeller = { path = "./crates/poirot-labeller/" }
 reth-tracing = { path = "./crates/reth-tracing/" }
 
 # Ethers
@@ -101,3 +103,4 @@ malachite = "0.4.0"
 # Misc
 c-kzg = { git = "https://github.com/ethereum/c-kzg-4844" }
 hex-literal = "0.4.1"
+rayon = "1.7.0"
