--- a/crates/poirot-classifer/Cargo.toml
+++ b/crates/poirot-classifer/Cargo.toml
@@ -14,12 +14,13 @@ reth-primitives.workspace = true
 tracing.workspace = true
 poirot-core.workspace = true
 hex-literal.workspace = true
+rayon.workspace = true
 
 malachite.workspace = true
 serde_json.workspace = true
 
 
-rayon = "1.7.0"
+
 paste = "1.0.14"
 phf = { version = "0.11", default-features = false }
 
