--- a/crates/poirot-labeller/Cargo.toml
+++ b/crates/poirot-labeller/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+reth-primitives.workspace = true
 sorella-db-clients = { git = "https://github.com/SorellaLabs/Database", package = "sorella-db-clients", branch = "modifications" }
 # serde
 serde_with = { version = "3.3.0", features = ["macros"] }
@@ -19,3 +20,5 @@ poirot-core.workspace = true
 hyper.workspace = true
 clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 futures = "0.3.28"
+tokio.workspace = true
+poirot-metrics.workspace = true
